refactor(menu): refatorado menu medico para retirar chamadas desnecessárias a metodo de show/whiles e usar Collectors.toList