@@ -10,6 +10,7 @@ import seletor.SeletorExame;
 import seletor.SeletorUsuario;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class MenuMedico extends Menu {
     private ExameRepository exameRepository = ExameRepository.getInstance();
@@ -27,56 +28,41 @@ public class MenuMedico extends Menu {
     protected void showSubMenu() {
         System.out.println("1 - Criar nova autorizacao de exame");
         System.out.println("2 - Listar autorizacoes");
-        int num = this.teclado.nextInt();
-        this.escolhaMenu(Integer.toString(num));
     }
 
     @Override
     void escolhaMenu(String input) {
-        System.out.println("Menu MEDICO - Usuário escolheu opção " + input);
-        while (true) {
-            try {
-                if (Integer.parseInt(input) == 1) {
-                    this.criarAutorizacao();
-                } else if (Integer.parseInt(input) == 2) {
-                    this.listarAutorizacoes();
-                } else {
-                    System.out.println("Opção inexistente. Tente novamente");
-                }
-            } catch (InputMismatchException ex) {
-                System.out.println("Ops...parece que voce digitou um valor invalido.");
-                this.teclado.nextLine();
-            }
+        switch (input) {
+            case "1":
+                this.criarAutorizacao();
+                break;
+            case "2":
+                this.listarAutorizacoes();
+                break;
         }
     }
 
     private void criarAutorizacao() {
-        Usuario usuario = this.seletorUsuario.selecionar(this.usuarioRepository.listar().stream().filter(u -> u.getTipo() == TipoUsuario.PACIENTE).toList());
+        Usuario usuario = this.seletorUsuario.selecionar(this.usuarioRepository.listarPorTipo(TipoUsuario.PACIENTE));
         Exame exame = this.seletorExame.selecionar(this.exameRepository.listar());
-        Usuario medico = this.seletorUsuario.selecionar(this.usuarioRepository.listar().stream().filter(u -> u.getTipo() == TipoUsuario.MEDICO).toList());
+        Usuario medico = this.seletorUsuario.selecionar(this.usuarioRepository.listarPorTipo(TipoUsuario.MEDICO));
 
         autorizacaoRepository.criar(usuario, exame, medico);
         System.out.println("Autorizacao criada!");
-        this.showSubMenu();
     }
 
     private void listarAutorizacoes() {
-        boolean estaRodando = true;
-        while (estaRodando) {
             try {
                 System.out.println("1 - Listar por paciente");
                 System.out.println("2 - Listar por tipo de exame");
-                System.out.println("99 - Retornar");
                 int num = this.teclado.nextInt();
 
                 if (num == 1) {
-                    Usuario usuario = this.seletorUsuario.selecionar(this.usuarioRepository.listar().stream().filter(u -> u.getTipo() == TipoUsuario.PACIENTE).toList());
-                    List<AutorizacaoExame> listaPaciente = this.autorizacaoRepository.listarPorPaciente(usuario).stream().toList();
-                    List<AutorizacaoExame> listaPacienteOrdenada = listaPaciente.stream().sorted(Comparator.comparing(AutorizacaoExame::getDataRealizacaoExame)).toList();
+                    Usuario usuario = this.seletorUsuario.selecionar(this.usuarioRepository.listarPorTipo(TipoUsuario.PACIENTE));
+                    List<AutorizacaoExame> listaPaciente = this.autorizacaoRepository.listarPorPaciente(usuario).stream().collect(Collectors.toList());
+                    List<AutorizacaoExame> listaPacienteOrdenada = listaPaciente.stream().sorted(Comparator.comparing(AutorizacaoExame::getDataRealizacaoExame)).collect(Collectors.toList());
                     if (listaPacienteOrdenada.size() < 1) {
                         System.out.println("Não há autorizações registradas");
-                        estaRodando = false;
-                        this.show();
                     } else {
                         listaPacienteOrdenada.forEach(list ->
                                 System.out.println("Código: " + list.getCodigo() + " - Exame: " +
@@ -87,12 +73,13 @@ public class MenuMedico extends Menu {
                     }
                 } else if (num == 2) {
                     Exame exame = this.seletorExame.selecionar(this.exameRepository.listar());
-                    List<AutorizacaoExame> listaExame = this.autorizacaoRepository.listarPorExame(exame).stream().toList();
-                    List<AutorizacaoExame> listaExameOrdenada = listaExame.stream().sorted(Comparator.comparing(AutorizacaoExame::getDataRealizacaoExame)).toList();
+                    List<AutorizacaoExame> listaExame = this.autorizacaoRepository.listarPorExame(exame)
+                            .stream().collect(Collectors.toList());
+                    List<AutorizacaoExame> listaExameOrdenada = listaExame.stream()
+                            .sorted(Comparator.comparing(AutorizacaoExame::getDataRealizacaoExame))
+                            .collect(Collectors.toList());
                     if (listaExameOrdenada.size() < 1) {
                         System.out.println("Não há autorizações registradas");
-                        estaRodando = false;
-                        this.show();
                     } else {
                         listaExameOrdenada.forEach(list ->
                                 System.out.println("Código: " + list.getCodigo() + " - Exame: " +
@@ -101,9 +88,6 @@ public class MenuMedico extends Menu {
                                         + (list.getDataRealizacaoExame() != null ?
                                         list.getDataRealizacaoExame().toString() : "Exame ainda não realizado")));
                     }
-                } else if (num == 99) {
-                    estaRodando = false;
-                    this.show();
                 } else {
                     System.out.println("Opção inexistente. Tente novamente");
                 }
@@ -112,5 +96,5 @@ public class MenuMedico extends Menu {
                 this.teclado.nextLine();
             }
         }
-    }
+
 }
